style-front.css
/* ... */
.trailer-button-uc-movies {
    background: #57714C;
    text-decoration: none;
}

/* Media Queries
---------------------------------------------------------------------------------------------------- */

@media only screen and (max-width: 767px) {

	.front-page-1 {
		margin-top: 0;
		padding-bottom: 0;
		padding-top: 0;
	}

	.front-page-1 .widget-area {
		padding-top: 0;
	}

	.flexible-widgets.widget-fourths .widget,
	.flexible-widgets.widget-halves .widget,
	.flexible-widgets.widget-thirds .widget,
	.front-page-2 .flexible-widgets.widget-halves .widget,
	.front-page-2 .widget {
		float: none;
		width: 100%;
	}

	.flexible-widgets .widget,
	.front-page-2 .flexible-widgets .widget:nth-child(even),
	.front-page-2 .flexible-widgets.widget-halves .widget:nth-child(odd) {
		padding-left: 0;
		padding-right: 0;
	}

	.front-page-1 .widget_text .widget-title {
		font-size: 60px;
		font-size: 6rem;
	}

	.front-page-2 .flexible-widgets.widget-halves .widget:nth-child(even),
	.front-page-2 .flexible-widgets.widget-halves .widget:nth-child(odd),
	.front-page-2 .flexible-widgets.widget-halves .widget:nth-child(n+3) {
		border-width: 0;
	}

	.front-page-1 .wrap,
	.front-page-3 .wrap {
	/*	padding: 8%; */
		padding: 0;
	}


h2.tabtitle.responsive-tabs__heading.responsive-tabs__heading--active,
h2.tabtitle.responsive-tabs__heading {
    background: #f5edcd;
    color: #a62f29;
}

.responsive-tabs .responsive-tabs__heading--active:after, .responsive-tabs .responsive-tabs__heading--active:hover:after {
    border-bottom: 6px solid #a62f29 !important;
    }

tabs__heading:hover,
.responsive-tabs .responsive-tabs__heading:hover  {
    background: #f5edcd !important;
    color: #a62f29 !important;
}

}







@media only screen and (max-width: 600px) {

	.front-page-1 .widget_text .widget-title {
		font-size: 36px;
		font-size: 3.6rem;
	}


.soliloquy-container .soliloquy-image {
	width: 100%;
}
	
	.front-page-1 .wrap {
		padding-top: 0;
	}

body {
	background-color: #ebdc99;
}

.more-info-button.one-half {
    margin-top: 40px;
}



}

